--- a/HRLeaveManagement.Infrastructure/HRLeaveManagement.Infrastructure.csproj
+++ b/HRLeaveManagement.Infrastructure/HRLeaveManagement.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HRLeaveManagement.Application\HRLeaveManagement.Application.csproj" />
+  </ItemGroup>
+
 </Project>
